fixed overflow-x on html element

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 html {
 	height: 100%;
+
+  	overflow-x: hidden;
 }
 
 body {
